collector/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collector
spec:
  replicas: 3
  selector:
    matchLabels:
      app: collector
  template:
    metadata:
      labels:
        app: collector
    spec:
      containers:
        - name: collector
          image: collector:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: collector
spec:
  selector:
    app: collector
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
